--- a/client/components/App/App.scss
+++ b/client/components/App/App.scss
@@ -2,6 +2,27 @@ body {
     font-family: Roboto, Arial, sans-serif;
 }
 
+.header {
+    &__contact,
+    &__logo,
+    &__icons{
+        height: 100%;
+
+        display: flex;
+        align-items: center;
+    }
+
+    &__contact{
+        justify-content: flex-start;
+    }
+    &__logo{
+        justify-content: center;
+    }
+    &__icons{
+        justify-content: flex-end;
+    }
+}
+
 .wrapper{
     display:            flex;
     flex-direction:     column;
