--- a/client/components/Tabs/Tabs.scss
+++ b/client/components/Tabs/Tabs.scss
@@ -2,6 +2,13 @@
 
     position: relative;
 
+    display: flex;
+    justify-content: space-around;
+
+    width: 100%;
+    height: 100%;
+    padding: 16px 0;
+
     &__item {
 
         display: inline;
