--- a/client/components/Tabs/Tab.scss
+++ b/client/components/Tabs/Tab.scss
@@ -15,26 +15,33 @@
     position: relative;
 
     display: inline-block;
-    height: 46px;
-    padding: 16px 8px;
+    height: 40px;
+    padding: 8px 0;
     
     text-decoration: none;
-
+    
     &:hover {
+        padding: 8px;
         text-decoration: none;
 
         background: $gray--middle;
         border-radius: 4px;
+
+        .b-tab__slide {
+            opacity: 0;
+        }
     }
 
 
     &__label {
         @include font-tab-label;
+
+        width: 100%;
     }
 
     &__slide {
         position: absolute;
-        bottom: 8px;
+        bottom: 0;
 
         display: block;
         
