--- a/client/components/App/App.scss
+++ b/client/components/App/App.scss
@@ -36,6 +36,14 @@ body {
         justify-content: space-between;
     }
 
+    &__social{
+        display: flex;
+        justify-content: center;
+
+        width: 100%;
+        padding: 8px;
+    }
+
     &__social-img{
         padding: 8px;
     }
