--- a/client/components/App/App.scss
+++ b/client/components/App/App.scss
@@ -1,3 +1,9 @@
+html,
+body,
+#app {
+  height: 100%;
+}
+
 body {
     font-family: Roboto, Arial, sans-serif;
 }
@@ -23,77 +29,13 @@ body {
     }
 }
 
+
 .wrapper{
     display:            flex;
     flex-direction:     column;
+    height:             100%;
 }
 
-.footer {
-    flex: 0 0 auto;
-
-    &__subscribe{
-        display: flex;
-        justify-content: space-around;
-
-        button {
-            background: #fff;
-            font-weight: normal;
-            text-align: center;
-            vertical-align: middle;
-            touch-action: manipulation;
-            cursor: pointer;
-            border: 1px solid #c6cad1;
-            white-space: nowrap;
-            padding: 6px 20px;
-            line-height: 1.25;
-            border-radius: 2px;
-            
-            &:hover {
-                color: #000;
-                background: #d9dce0;
-            }
-        }
-
-    }
-
-    &__input {
-        height: 34px;
-        padding: 6px 12px;
-
-        font-size: 16px;
-        line-height: 1.25;
-
-        border: 1px solid #ccc;
-        border-radius: 3px;
-        transition: border-color ease-in-out 0.15s,
-                    box-shadow ease-in-out 0.15s;
-    }
-    
-    &__links {
-        display: flex;
-        justify-content: center;
-        width: 100%;
-    }
-
-    &__social {
-        display: flex;
-        justify-content: center;
-
-        width: 100%;
-        padding: 8px;
-    }
-
-    &__social-img{
-        padding: 8px;
-    }
-
-
-    &__copyright{
-        
-        display: flex;
-        justify-content: center;
-        
-        width: 100%;
-        padding:16px 0;
-    }
+.co {
+    flex: 1 0 auto;
 }
