--- a/client/components/Footer/Footer.scss
+++ b/client/components/Footer/Footer.scss
@@ -22,8 +22,11 @@
             border-radius: 2px;
             
             &:hover {
-                color: #000;
-                background: #d9dce0;
+                // color: #000;
+                // background: #d9dce0;
+
+                color: #5A394E;
+                background: #e0d5e8;
             }
         }
 
