--- a/client/components/Navbar/Navbar.scss
+++ b/client/components/Navbar/Navbar.scss
@@ -18,6 +18,10 @@
     width: 100%;
     
     background: #5A394E;
+
+    &__menu-button {
+        display: flex;
+    }
     
     &__link {
         @include font-tab-label;
@@ -32,7 +36,7 @@
         color: #fff;
         text-decoration: none;
         
-        &--active{
+        &--active {
             background: rgba(0,0,0, 0.3);
         }
 
@@ -43,4 +47,13 @@
             text-decoration: none;
         }
     }
+}
+
+@media screen and (min-width: 768px) {
+    .navbar {
+        &__menu-button{
+            display: none;
+        }
+
+    }    
 }
