--- a/client/components/Navbar/Navbar.scss
+++ b/client/components/Navbar/Navbar.scss
@@ -48,12 +48,15 @@
         }
     }
 }
+@media screen and (max-width: 768px){
+    .b-navbar {
+        flex-direction: column;
 
-@media screen and (min-width: 768px) {
-    .navbar {
         &__menu-button{
             display: none;
         }
-
+        &__link {
+            width: 100%;
+        }
     }    
 }
