--- a/client/components/App/App.scss
+++ b/client/components/App/App.scss
@@ -17,8 +17,13 @@ body {
         display: flex;
         align-items: center;
     }
-    &__menu{
-        display: none;
+
+    &__menu {
+        width: 100%;
+        height: 100%;
+        
+        display: flex;
+        align-items: center;
     }
 
     &__contact{
@@ -46,7 +51,6 @@ body {
 @media screen and (max-width: 768px){
     .header {
         &__menu{
-            display: block;
         }
     }
 }
