--- a/client/components/NavbarButton/NavbarButton.scss
+++ b/client/components/NavbarButton/NavbarButton.scss
@@ -26,33 +26,32 @@
     span:nth-child(4){
         top:20px
     }
+
+
+    &--clicked{
+        span:nth-child(1){
+            top: 18px;
+            width: 0%;
+            left: 50%;
+        }
+        span:nth-child(2){
+            transform: rotate(45deg);
+        }
+        span:nth-child(3){
+            transform: rotate(-45deg);
+        }
+        span:nth-child(4){
+            top: 18px;
+            width: 0%;
+            left: 50%;
+        }
+    }
 }
 
+ 
+
 @media screen and (max-width: 768px){
-    .icon{
+    .navbar-button{
         display: inline-block;
     }
 }
-.navbar-button span:nth-child(1){
-    top: 18px;
-    width: 0%;
-    left: 50%;
-}
-
-.navbar-button span:nth-child(2){
-    transform: rotate(45deg);
-}
-.navbar-button span:nth-child(3){
-    transform: rotate(-45deg);
-}
-
-.navbar-button span:nth-child(4){
-    top: 18px;
-    width: 0%;
-    left: 50%;
-}
-
-.b-menu--open .items{
-    opacity: 1;
-}
-
